<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/NumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/ButtonsContainer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/IOEntry"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/PreviousEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text=""
                android:textSize="30sp"
                android:textAlignment="textEnd"
                android:lineSpacingExtra="5dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@+id/IOEntry"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ButtonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A6A7B4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/C"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#FF9800"
                android:text="@string/c"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/button7"
                app:layout_constraintEnd_toStartOf="@+id/CE"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/CE"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#D3E6E6"
                android:text="@string/ce"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/button8"
                app:layout_constraintEnd_toStartOf="@+id/BS"
                app:layout_constraintStart_toEndOf="@+id/C"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/BS"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#D3E6E6"
                android:text="@string/bs"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/button9"
                app:layout_constraintEnd_toStartOf="@+id/divide"
                app:layout_constraintStart_toEndOf="@+id/CE"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/divide"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#D3E6E6"
                android:paddingBottom="14dp"
                android:text="@string/divide"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/multiply"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/BS"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/multiply"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#D3E6E6"
                android:paddingBottom="14dp"
                android:text="@string/multiply"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/minus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button9"
                app:layout_constraintTop_toBottomOf="@+id/divide"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/minus"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#D3E6E6"
                android:paddingBottom="14dp"
                android:text="@string/minus"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button6"
                app:layout_constraintTop_toBottomOf="@+id/multiply"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/plus"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#D3E6E6"
                android:paddingBottom="14dp"
                android:text="@string/plus"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/equal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button3"
                app:layout_constraintTop_toBottomOf="@+id/minus"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/button9"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:backgroundTint="#F7FAFF"
                android:text="@string/_9"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/button6"
                app:layout_constraintEnd_toStartOf="@+id/multiply"
                app:layout_constraintStart_toEndOf="@+id/button8"
                app:layout_constraintTop_toBottomOf="@+id/BS"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/button8"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:backgroundTint="#F7FAFF"
                android:text="@string/_8"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintEnd_toStartOf="@+id/button9"
                app:layout_constraintStart_toEndOf="@+id/button7"
                app:layout_constraintTop_toBottomOf="@id/CE"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/button7"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#F7FAFF"
                android:text="@string/_7"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/button4"
                app:layout_constraintEnd_toStartOf="@+id/button8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/C"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/button6"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:backgroundTint="#F7FAFF"
                android:text="@string/_6"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/button3"
                app:layout_constraintEnd_toStartOf="@+id/minus"
                app:layout_constraintStart_toEndOf="@+id/button5"
                app:layout_constraintTop_toBottomOf="@+id/button9"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/button5"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:backgroundTint="#F7FAFF"
                android:text="@string/_5"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toStartOf="@+id/button6"
                app:layout_constraintStart_toEndOf="@+id/button4"
                app:layout_constraintTop_toBottomOf="@+id/button8"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/button4"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#F7FAFF"
                android:text="@string/_4"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/button1"
                app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button7"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/button3"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:backgroundTint="#F7FAFF"
                android:text="@string/_3"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/decimal"
                app:layout_constraintEnd_toStartOf="@+id/plus"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/button6"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/button2"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:backgroundTint="#F7FAFF"
                android:text="@string/_2"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/button0"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintStart_toEndOf="@+id/button1"
                app:layout_constraintTop_toBottomOf="@+id/button5"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/button1"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#F7FAFF"
                android:text="@string/_1"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/sign_swap"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button4"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/button0"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#F7FAFF"
                android:text="@string/_0"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/decimal"
                app:layout_constraintStart_toEndOf="@+id/sign_swap"
                app:layout_constraintTop_toBottomOf="@+id/button2"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored"
                tools:ignore="DuplicateSpeakableTextCheck" />
            <Button
                android:id="@+id/equal"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#D3E6E6"
                android:paddingBottom="14dp"
                android:text="@string/equal"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/decimal"
                app:layout_constraintTop_toBottomOf="@+id/plus"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/decimal"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#D3E6E6"
                android:text="@string/decimal"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/equal"
                app:layout_constraintStart_toEndOf="@+id/button0"
                app:layout_constraintTop_toBottomOf="@+id/button3"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:id="@+id/sign_swap"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#D3E6E6"
                android:text="@string/sign_swap"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button1"
                app:shapeAppearance="@style/Widget.AppCompat.Button.Colored" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>